--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package-win": "electron-packager . --overwrite --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"SudocToolkit\""
+    "build": "electron-packager . --overwrite --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=dist --version-string.ProductName=\"SudocToolkit\"",
+    "setup": "node installers/windows/createinstaller.js"
   },
   "license": "MIT",
   "devDependencies": {
     "asar": "^2.0.1",
     "electron": "^5.0.6",
     "electron-packager": "^14.0.6",
-    "electron-reload": "^1.4.0"
+    "electron-reload": "^1.4.0",
+    "electron-winstaller": "^4.0.0"
   },
   "dependencies": {
     "canvasjs": "^1.8.1",
@@ -22,7 +24,6 @@
     "jquery": "^3.4.1",
     "progress-stream": "^2.0.0",
     "request": "^2.88.0",
-    "underscore": "^1.9.1",
-    "update-electron-app": "^1.5.0"
+    "underscore": "^1.9.1"
   }
 }
