--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . --overwrite --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=dist --version-string.ProductName=\"SudocToolkit\"",
-    "setup": "node installers/windows/createinstaller.js"
+    "build": "electron-packager . --overwrite --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=dist --version-string.ProductName=\"SudocToolkit\""
   },
   "license": "MIT",
+  "repository": "github:gegedenice/SudocToolkit",
   "devDependencies": {
     "asar": "^2.0.1",
     "electron": "^5.0.6",
@@ -24,6 +24,7 @@
     "jquery": "^3.4.1",
     "progress-stream": "^2.0.0",
     "request": "^2.88.0",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "update-electron-app": "^1.5.0"
   }
 }
