--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "electron-packager . --overwrite --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=dist --version-string.ProductName=\"SudocToolkit\""
   },
   "license": "MIT",
-  "repository": "github:gegedenice/SudocToolkit",
+  "repository": "github:abes-esr/SudocToolkit",
   "devDependencies": {
     "asar": "^2.0.1",
     "electron": "^5.0.6",
