--- a/package.json
+++ b/package.json
@@ -5,34 +5,31 @@
   "description": "Utiliser les web services de l'Abes sans être développeur",
   "author": "Géraldine Geoffroy",
   "main": "main.js",
-  "scripts": {
+   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . --overwrite --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=dist --version-string.ProductName=\"SudocToolkit\""
+    "build": "electron-packager . --electronVersion:17.1.1 --overwrite --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=dist --version-string.ProductName=\"SudocToolkit\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github:abes-esr/SudocToolkit.git"
   },
   "license": "MIT",
-  "repository": "github:abes-esr/SudocToolkit",
-  "devDependencies": {
-<<<<<<< HEAD
-    "electron": "^15.1.2",
-    "electron-packager": "^15.4.0",
-    "electron-reload": "^1.5.0"
+  "bugs": {
+    "url": "https://github:abes-esr/SudocToolkit/issues"
   },
+  "homepage": "https://github:abes-esr/SudocToolkit#readme",
   "dependencies": {
-    "@electron/remote": "^2.0.1",
-    "jquery": "^3.6.0",
-    "papaparse": "^5.3.1"
-=======
-    "electron": "^11.5.0",
-    "electron-packager": "^15.1.0",
-    "electron-reload": "^1.5.0"
-  },
-  "dependencies": {
-    "axios": "^0.21.2",
+    "axios": "^0.26.0",
     "canvasjs": "^1.8.3",
-    "csv-parse": "^4.12.0",
-    "jquery": "^3.5.1",
-    "papaparse": "^5.2.0",
-    "underscore": "^1.12.1"
->>>>>>> 53f6fb17ddf0a07f01f7484edb05cea2ed3d04a4
+    "csv-parse": "^5.0.4",
+    "jquery": "^3.6.0",
+    "papaparse": "^5.3.1",
+    "underscore": "^1.13.2"
+  },
+  "Devdependencies": {
+    "electron": "^17.1.1",
+    "electron-packager": "^15.4.0",
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-remote": "^1.3.0"
   }
 }
